--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Times New Roman, sans-serif;
-  background: linear-gradient(to right, #FFB6C1, #9370DB);
+    background: rgb(2,0,36);
+    background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(113,80,156,1) 35%, rgba(207,232,227,1) 100%);
 }
 h1 {
     color: #4B0082
